Added features + frontend and backend testing